Added another box

--- a/index.html
+++ b/index.html
@@ -25,8 +25,14 @@
 			width:25%;
 			float:left;
 		}
+		.things{
+			background-color: pink;
+			padding:20px;
+			width:25%;
+			float:left;
+		}
 		@media screen and (max-width:800px){
-			.menu,.icons,.layout{
+			.menu,.icons,.layouts,.things{
 				width: 100%;
 			}
 		}
@@ -38,5 +44,6 @@
 	<div class="menu">Menu bar</div>
 	<div class="icons">Icons</div>
     <div class="layouts">Layouts</div>
+    <div class="things">Things</div>
 </body>
 </html>
