--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			float:left;
 		}
 		.things{
-			background-color: pink;
+			background-color: red;
 			padding:20px;
 			width:25%;
 			float:left;
